[package]
name = "fltk-observe"
version = "0.1.7"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2024"
description = "An observer pattern for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-observe"
documentation = "https://docs.rs/fltk-observe"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
exclude = ["./examples"]

[dependencies]
fltk = "1.5"